SMART#3 restaurants section layout fix is done. The section had right overflow due to left padding.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,7 +665,8 @@ header .title-h1h4 {
     width: 100%;
     padding-top: 25px;
     padding-bottom: 0;
-    padding-left: 14vw;
+    padding-left: 7vw;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
